--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.16.1",
     "@apollo/client": "^3.5.8",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
@@ -23,7 +23,8 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2"
+    "react-native-screens": "^3.10.2",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
