--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-date-picker": "^4.2.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
