--- a/.github/workflows/devrating.yml
+++ b/.github/workflows/devrating.yml
@@ -1,14 +1,10 @@
 name: Update PR size suggestions at devrating.net
 on:
   pull_request:
-    branches: [ main ]
-    types: [ closed ]
 jobs:
   devrating:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/hello-world-docker-action@master
       with:
-        fetch-depth: 0
-
-    - uses: victorx64/devrating.action@v0
+        who-to-greet: 'Mona the Octocat'
